--- a/extension/frontend/manifest.json
+++ b/extension/frontend/manifest.json
@@ -4,11 +4,17 @@
   "author": "R. Maria",
   "version": "1.0",
   "description": "Classify text in online articles.",
-  "permissions": ["scripting", "activeTab", "storage"],
+  "permissions": [
+    "scripting",
+    "activeTab",
+    "storage"
+  ],
   "background": {
     "service_worker": "background.js"
   },
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "action": {
     "default_icon": {
       "16": "icon.png"
@@ -16,14 +22,18 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "<all_urls>"
+      ],
       "js": [
         "utils.js",
         "highlight.js",
         "analyze_button.js",
         "content_scripts.js"
       ],
-      "css": ["content_styles.css"],
+      "css": [
+        "content_styles.css"
+      ],
       "run_at": "document_end"
     }
   ]
